--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<head>
+		<meta charset='utf-8'>
+		<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+		<title>Svelte app</title>
 
-	<script defer src='/build/bundle.js'></script>
-</head>
+		<link rel='icon' type='image/png' href='/favicon.png'>
+		<link rel='stylesheet' href='/global.css'>
+		<link rel='stylesheet' href='/normalize.css'>
+		<link rel='stylesheet' href='/build/bundle.css'>
 
-<body>
-</body>
+		<script defer src='/build/bundle.js'></script>
+	</head>
+
+	<body>
+	</body>
+	<script src="https://kit.fontawesome.com/0a3353886b.js" crossorigin="anonymous"></script>
+
 </html>
